<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewsActivity"
    android:id="@+id/main">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        app:cardElevation="8dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            app:defaultQueryHint="Search News..."
            app:iconifiedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </androidx.appcompat.widget.SearchView>


    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_1"
                android:text="Business"
                android:textColor="?attr/text_color"
                android:textSize="12sp"
                android:padding="8dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/orange">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_2"
                android:text="Entertainment"
                android:textColor="?attr/text_color"
                android:textSize="12sp"
                android:padding="8dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/orange">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_3"
                android:text="General"
                android:textColor="?attr/text_color"
                android:textSize="12sp"
                android:padding="8dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/orange">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_4"
                android:text="Health"
                android:textColor="?attr/text_color"
                android:textSize="12sp"
                android:padding="8dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/orange">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_5"
                android:text="Science"
                android:textColor="?attr/text_color"
                android:textSize="12sp"
                android:padding="8dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/orange">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_6"
                android:text="Sports"
                android:textColor="?attr/text_color"
                android:textSize="12sp"
                android:padding="8dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/orange">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_7"
                android:text="Technology"
                android:textColor="?attr/text_color"
                android:textSize="12sp"
                android:padding="8dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/orange">
        </Button>

        </LinearLayout>

    </HorizontalScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <Switch
            android:id="@+id/switchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dark mode"

            android:layout_alignParentEnd="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_main"
        android:layout_margin="8dp">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>